--- a/mainpage.html
+++ b/mainpage.html
@@ -44,7 +44,8 @@
 			</div>
 
 			<div class="content-center">
-				<p id="abs1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+        <button type="button" class="collapsible">Hide 1</button>
+				<p id="abs1"> 1 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
 					et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -58,8 +59,9 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<p id="abs2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 2</button>
+				<p id="abs2">2 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
 					et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -73,8 +75,9 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<p id="abs3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 3</button>
+				<p id="abs3">3 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
 					et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -88,8 +91,9 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<p id="abs4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 4</button>
+				<p id="abs4">4 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
 					et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -103,8 +107,9 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<p id="abs5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 5</button>
+				<p id="abs5">5 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
 					et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -118,7 +123,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 6</button>
 				<p id="abs6">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -133,7 +139,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 7</button>
 				<p id="abs7">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -148,7 +155,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 8</button>
 				<p id="abs8">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -163,7 +171,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <button type="button" class="collapsible">Hide 9</button>
 				<p id="abs9">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -198,5 +207,5 @@
 		</div>
 	</div>
 </body>
-
+<script src="scripts.js"></script>
 </html>
