--- a/mainpage.html
+++ b/mainpage.html
@@ -25,7 +25,7 @@
 				<li><a href="">V02c</a></li>
 			</ul>
 		</nav>
-		
+
 		<div class="content-container">
 			<div class="content-left">
 				<nav class="contentnav">
@@ -44,7 +44,7 @@
 			</div>
 
 			<div class="content-center">
-        <button type="button" class="collapsible">Hide 1</button>
+				<button type="button" class="collapsible">Hide 1</button>
 				<p id="abs1"> 1 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -59,8 +59,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 2</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 2</button>
 				<p id="abs2">2 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -75,8 +75,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 3</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 3</button>
 				<p id="abs3">3 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -91,8 +91,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 4</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 4</button>
 				<p id="abs4">4 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -107,8 +107,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 5</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 5</button>
 				<p id="abs5">5 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -123,8 +123,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 6</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 6</button>
 				<p id="abs6">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -139,8 +139,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 7</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 7</button>
 				<p id="abs7">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -155,8 +155,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 8</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 8</button>
 				<p id="abs8">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -171,8 +171,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-        <button type="button" class="collapsible">Hide 9</button>
+					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+				<button type="button" class="collapsible">Hide 9</button>
 				<p id="abs9">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -205,7 +205,14 @@
 				</nav>
 			</div>
 		</div>
+
+		<div id="cookie">
+			<p id="cookietext">Auf unserer Seite benutzen wir Cookies. <a href="cookies.html">Mehr Info</a></p>
+
+			<div id="cookie-button" onclick='cookie()'>Mir doch egal</div>
+		</div>
 	</div>
 </body>
 <script src="scripts.js"></script>
+
 </html>
