Ausklapp Buttons durch <i> Elemente ersetzt und mit CSS zu Pfeilen gestyled

--- a/mainpage.html
+++ b/mainpage.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
-	<title>Main Page</title>
+  <title>Main Page</title>
+  <meta charset="UTF-8">
 	<link href="stylesheet.css" rel="stylesheet" />
 </head>
 
@@ -44,7 +45,7 @@
 			</div>
 
 			<div class="content-center">
-				<button type="button" class="collapsible">Hide 1</button>
+        <i class="pfeil-d"></i>
 				<p id="abs1"> 1 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -59,8 +60,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 2</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs2">2 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -75,8 +76,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 3</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs3">3 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -91,8 +92,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 4</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs4">4 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -107,8 +108,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 5</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs5">5 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -123,8 +124,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 6</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs6">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -139,8 +140,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 7</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs7">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -155,8 +156,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 8</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs8">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -171,8 +172,8 @@
 					amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
 					aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
 					clita
-					kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-				<button type="button" class="collapsible">Hide 9</button>
+          kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+        <i class="pfeil-d"></i>
 				<p id="abs9">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
 					invidunt ut
 					labore
@@ -211,8 +212,7 @@
 
 			<div id="cookie-button" onclick='cookie()'>Mir doch egal</div>
 		</div>
-	</div>
+  </div>
+  <script src="scripts.js"></script>
 </body>
-<script src="scripts.js"></script>
-
 </html>
