Zeiger bei Hover geändert, kompletten Name klickbar gemacht

--- a/mainpage.html
+++ b/mainpage.html
@@ -46,7 +46,7 @@
 
 			<div class="content-center">
         <div class="center-paragraph">
-          <h4 id="abs1"><i class="pfeil-d"></i>Abschnitt 1</h4>
+          <h4 id="abs1" class="hider"><i class="pfeil-d"></i>Abschnitt 1</h4>
           <p> 1 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -64,7 +64,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs2"><i class="pfeil-d"></i>Abschnitt 2</h4>
+          <h4 id="abs2" class="hider"><i class="pfeil-d"></i>Abschnitt 2</h4>
           <p>2 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -82,7 +82,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs3"><i class="pfeil-d"></i>Abschnitt 3</h4>
+          <h4 id="abs3" class="hider"><i class="pfeil-d"></i>Abschnitt 3</h4>
           <p>3 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -100,7 +100,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs4"><i class="pfeil-d"></i>Abschnitt 4</h4>
+          <h4 id="abs4" class="hider"><i class="pfeil-d"></i>Abschnitt 4</h4>
           <p>4 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -118,7 +118,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs5"><i class="pfeil-d"></i>Abschnitt 5</h4>
+          <h4 id="abs5" class="hider"><i class="pfeil-d"></i>Abschnitt 5</h4>
           <p>5 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -136,7 +136,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs6"><i class="pfeil-d"></i>Abschnitt 6</h4>
+          <h4 id="abs6" class="hider"><i class="pfeil-d"></i>Abschnitt 6</h4>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -154,7 +154,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs7"><i class="pfeil-d"></i>Abschnitt 7</h4>
+          <h4 id="abs7" class="hider"><i class="pfeil-d"></i>Abschnitt 7</h4>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -172,7 +172,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs8"><i class="pfeil-d"></i>Abschnitt 8</h4>
+          <h4 id="abs8" class="hider"><i class="pfeil-d"></i>Abschnitt 8</h4>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
@@ -190,7 +190,7 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
         <div class="center-paragraph">
-          <h4 id="abs9"><i class="pfeil-d"></i>Abschnitt 9</h4>
+          <h4 id="abs9" class="hider"><i class="pfeil-d"></i>Abschnitt 9</h4>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             invidunt ut
             labore
