--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,8 @@
 <head>
   <title>Main Page</title>
   <meta charset="UTF-8">
-	<link href="stylesheet.css" rel="stylesheet" />
+  <link href="stylesheet.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="hsmalogo.png"/>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 				<li><a href="andereseite.html">V01</a></li>
 				<li><a href="">V02a</a></li>
 				<li><a href="">V02b</a></li>
-				<li><a href="">V02c</a></li>
+				<li><a href="v02c-css.html">V02c</a></li>
 			</ul>
 		</nav>
 
