--- a/mainpage.html
+++ b/mainpage.html
@@ -13,7 +13,7 @@
 		<div class="header">
 			<div>
 				<p>Gruppe A-5</p>
-				<img src="hsmalogo.png" class="logo">
+				<img src="hsmalogo.png" id="logo">
 				<img src="hsmaschriftzug.png" alt="Hochschule Mannheim" class="schriftzug">
 			</div>
 		</div>
@@ -24,7 +24,10 @@
 				<li><a href="andereseite.html">V01</a></li>
 				<li><a href="">V02a</a></li>
 				<li><a href="">V02b</a></li>
-				<li><a href="v02c-css.html">V02c</a></li>
+        <li><a href="v02c-css.html">V02c</a></li>
+        <li><a href="">V03a</a></li>
+        <li><a href="">V03b</a></li>
+        <li><a href="">V03c</a></li>
 			</ul>
 		</nav>
 
@@ -209,13 +212,9 @@
             kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
         </div>
 			</div>
-
 			<div class="content-right">
-
 			</div>
-
 		</div>
-
 		<div class="footer">
 			<div>
 				<nav>
@@ -224,12 +223,6 @@
 					<a href="impressium.html">Impressium</a>
 				</nav>
 			</div>
-		</div>
-
-		<div id="cookie">
-			<p id="cookietext">Auf unserer Seite benutzen wir Cookies. <a href="cookies.html">Mehr Info</a></p>
-
-			<div id="cookie-button" onclick='cookie()'>Mir doch egal</div>
 		</div>
   </div>
   <script src="scripts.js"></script>
