--- a/v02c-css.html
+++ b/v02c-css.html
@@ -19,13 +19,16 @@
     </div>
 
     <nav>
-      <ul class="navigation">
-        <li><a href="mainpage.html">Start</a></li>
-        <li><a href="andereseite.html">V01</a></li>
-        <li><a href="">V02a</a></li>
-        <li><a href="">V02b</a></li>
-        <li><a id="activetab" href="v02c-css.html">V02c</a></li>
-      </ul>
+			<ul class="navigation">
+				<li><a id="activetab" href="mainpage.html">Start</a></li>
+				<li><a href="andereseite.html">V01</a></li>
+				<li><a href="">V02a</a></li>
+				<li><a href="">V02b</a></li>
+        <li><a href="v02c-css.html">V02c</a></li>
+        <li><a href="">V03a</a></li>
+        <li><a href="">V03b</a></li>
+        <li><a href="">V03c</a></li>
+			</ul>
     </nav>
 
     <div class="content-container">
@@ -78,12 +81,6 @@
           <a href="impressium.html">Impressium</a>
         </nav>
       </div>
-    </div>
-
-    <div id="cookie">
-      <p id="cookietext">Auf unserer Seite benutzen wir Cookies. <a href="cookies.html">Mehr Info</a></p>
-
-      <div id="cookie-button" onclick='cookie()'>Mir doch egal</div>
     </div>
   </div>
   <script src="scripts.js"></script>
