--- a/mainpage.html
+++ b/mainpage.html
@@ -220,7 +220,7 @@
 				<nav>
 					<a href="datenschutz.html">Datenschutzbestimmung</a>
 					<br>
-					<a href="impressium.html">Impressium</a>
+					<a href="impressum.html">Impressum</a>
 				</nav>
 			</div>
 		</div>
