--- a/v02c-css.html
+++ b/v02c-css.html
@@ -13,7 +13,7 @@
     <div class="header">
       <div>
         <p>Gruppe A-5</p>
-        <img src="hsmalogo.png" class="logo">
+        <img src="hsmalogo.png" id="logo">
         <img src="hsmaschriftzug.png" alt="Hochschule Mannheim" class="schriftzug">
       </div>
     </div>
@@ -78,7 +78,7 @@
         <nav>
           <a href="datenschutz.html">Datenschutzbestimmung</a>
           <br>
-          <a href="impressium.html">Impressium</a>
+          <a href="impressum.html">Impressum</a>
         </nav>
       </div>
     </div>
