--- a/mainpage.html
+++ b/mainpage.html
@@ -21,10 +21,10 @@
 		<nav>
 			<ul class="navigation">
 				<li><a id="activetab" href="mainpage.html">Start</a></li>
-				<li><a href="andereseite.html">V01</a></li>
-				<li><a href="">V02a</a></li>
-				<li><a href="">V02b</a></li>
-        <li><a href="v02c-css.html">V02c</a></li>
+				<li><a href="andereseite.html">Server & Client</a></li>
+				<li><a href="">HTML</a></li>
+				<li><a href="v02b-css.html">CSS</a></li>
+        <li><a href="">JavaScript</a></li>
         <li><a href="">V03a</a></li>
         <li><a href="">V03b</a></li>
         <li><a href="">V03c</a></li>
