Navbar bei v02b angepasst

--- a/v02b-css.html
+++ b/v02b-css.html
@@ -26,9 +26,9 @@
                 <li><a href="">HTML</a></li>
                 <li><a id="activetab" href="v02b-css.html">CSS</a></li>
                 <li><a href="">JavaScript</a></li>
-                <li><a href="">V03a</a></li>
-                <li><a href="">V03b</a></li>
-                <li><a href="">V03c</a></li>
+                <li><a href="">JSP's/Servlets/JaxB</a></li>
+                <li><a href="">PHP</a></li>
+                <li><a href="">NodeJS</a></li>
             </ul>
         </nav>
 
