tabelle und bilder gefixt

--- a/v02b-css.html
+++ b/v02b-css.html
@@ -225,7 +225,7 @@
                                         <th>Name</th>
                                         <th>Hex-Wert</th>
                                         <th>RGB-Wert</th>
-                                        <th>HSL-Wert</th>
+                                        <th class="hide">HSL-Wert</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -233,31 +233,31 @@
                                         <td>Red</td>
                                         <td>#ff0000</td>
                                         <td>rgb(255,0,0)</td>
-                                        <td>hsl(0, 100%, 50%)</td>
+                                        <td class="hide">hsl(0, 100%, 50%)</td>
                                     </tr>
                                     <tr id="blue">
                                         <td>Blue</td>
                                         <td>#0000ff</td>
                                         <td>rgb(0,0,255)</td>
-                                        <td>hsl(240, 100%, 50%)</td>
+                                        <td class="hide">hsl(240, 100%, 50%)</td>
                                     </tr>
                                     <tr id="green">
                                         <td>Green</td>
                                         <td>#00ff00</td>
                                         <td>rgb(0,255,0)</td>
-                                        <td>hsl(120, 100%, 50%)</td>
+                                        <td class="hide">hsl(120, 100%, 50%)</td>
                                     </tr>
                                     <tr id="goldenrod">
                                         <td>GoldenRod</td>
                                         <td>#DAA520</td>
                                         <td>rgb(218,165,32)</td>
-                                        <td>hsl(43, 74%, 49%)</td>
+                                        <td class="hide">hsl(43, 74%, 49%)</td>
                                     </tr>
                                     <tr id="darkseagreen">
                                         <td>DarkSeaGreen</td>
                                         <td>#8fbc8f</td>
                                         <td>rgb(143,188,143)</td>
-                                        <td>hsl(120, 25%, 65%)</td>
+                                        <td class="hide">hsl(120, 25%, 65%)</td>
                                     </tr>
                                 </tbody>
                             </table>
