JavaScript Anfang eingebunden

--- a/mainpage.html
+++ b/mainpage.html
@@ -24,7 +24,7 @@
                 <li><a href="andereseite.html">Server & Client</a></li>
                 <li><a href="">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
-                <li><a href="">JavaScript</a></li>
+                <li><a href="v02c-javascript.html">JavaScript</a></li>
                 <li><a href="">JSP's/Servlets/JaxB </a></li>
                 <li><a href="">PHP</a></li>
                 <li><a href="">NodeJS</a></li>
