letztes fixes, hoffentlich

--- a/v02b-css.html
+++ b/v02b-css.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <title>Main Page</title>
+    <title>CSS3 im Detail</title>
     <meta charset="UTF-8">
     <link href="stylesheet.css" rel="stylesheet" />
     <link href="v02b-data/v02b-style.css" rel="stylesheet" />
@@ -62,7 +62,7 @@
                 </p>
                 <a id="skriptlink" href="v02b-data/CSS3 im Detail.pdf" target="_blank">→ CSS3 im Detail ←</a>
                 <p class="author">
-                    Author: Matthes Würbs
+                    Autor: Matthes Würbs
                 </p>
                 <br><br>
                 <div class="leseprobe">
